moved script parameters to config.json and used unique exit codes

--- a/config.sample.json
+++ b/config.sample.json
@@ -1,4 +1,11 @@
 {
+    "General": {
+        "GlobalTimeout": 7200,
+        "RecreateStagingTable": false,
+        "RunSanityCheck": true,
+        "MaxRetries": 3,
+        "RetryDelaySeconds": 10
+    },
     "Firebird": {
         "Server": "DEIN_SERVER_NAME",
         "Password": "DEIN_PASSWORT",
