Added the option ForceFullLoad to config and to the Sync Script in order to forcefully sync all data from firebird to mssql

--- a/config.sample.json
+++ b/config.sample.json
@@ -2,6 +2,7 @@
     "General": {
         "GlobalTimeout": 7200,
         "RecreateStagingTable": false,
+        "ForceFullLoad": false,
         "RunSanityCheck": true,
         "MaxRetries": 3,
         "RetryDelaySeconds": 10
