--- a/config.sample.json
+++ b/config.sample.json
@@ -2,7 +2,7 @@
     "General": {
         "GlobalTimeout": 7200,
         "RecreateStagingTable": false,
-        "ForceFullLoad": false,
+        "ForceFullSync": false,
         "RunSanityCheck": true,
         "MaxRetries": 3,
         "RetryDelaySeconds": 10
