added prefix and suffix configuration possibility to the config file and code. Changed the sql stored procedure definition to match this config change.

--- a/config.sample.json
+++ b/config.sample.json
@@ -20,7 +20,9 @@
         "Integrated Security": true,
         "Username": "satest",
         "Password": "123456",
-        "Database": "STAGING"
+        "Database": "STAGING",
+        "Prefix": "FB_",
+        "Suffix": ""
     },
     "Tables": [
         "BLIEF",
