--- a/config.sample.json
+++ b/config.sample.json
@@ -3,12 +3,16 @@
     "GlobalTimeout": 7200,
     "RecreateStagingTable": false,
     "ForceFullSync": false,
+    "RecreateStoredProcedure": false,
+    "NumberOfThreads": 4,
     "RunSanityCheck": true,
     "MaxRetries": 3,
     "RetryDelaySeconds": 10,
     "DeleteLogOlderThanDays": 30,
     "CleanupOrphans": false,
-    "OrphanCleanupBatchSize": 50000
+    "OrphanCleanupBatchSize": 50000,
+    "IdColumn": "ID",
+    "TimestampColumns": ["GESPEICHERT", "MODIFIED_DATE", "LAST_UPDATE", "CHANGED_AT"]
   },
   "Firebird": {
     "Server": "DEIN_SERVER_NAME",
@@ -31,6 +35,17 @@
   "Tables": [
     "BLIEF", 
     "BKUNDE", 
-    "BSA"
-  ]
+    "BSA",
+    "LEGACY_ORDERS",
+    "AUDIT_LOG"
+  ],
+  "TableOverrides": {
+    "LEGACY_ORDERS": {
+      "IdColumn": "ORDER_ID",
+      "TimestampColumn": "CHANGED_AT"
+    },
+    "AUDIT_LOG": {
+      "IdColumn": "LOG_ID"
+    }
+  }
 }
